# bluepill_dashboard

./: .gitignore  README.md  bms_bluepill_mock.ioc
.github/workflows/: github-actions-compile-and-test.yaml
Core/Inc/: FreeRTOSConfig.h  bmsParams.h  freertos_tasks.h  stm32f1xx_it.h  utils.h
Core/Src/: bmsParams.c  freertos.c  main.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c  utils.c
Tests/: CMakeLists.txt  test_suite.cc
bmsMontor/: bms_monitor.py  params.yaml
